# switch_fp_comp

./: CMakeLists.txt  Operations_128.h  Operations_32.h  Operations_64.h  README.md  TestTemplate.h  gen.py  main.cpp
.github/workflows/: cmake.yml
